--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "gsap": "^3.12.5",
+    "next": "14.2.3",
     "postcss": "^8",
+    "recoil": "^0.7.7",
+    "sass": "^1.77.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
