--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.43.5",
+    "@vercel/analytics": "^1.3.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
