--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.15.20",
+    "@mui/x-charts": "^7.7.1",
     "@supabase/supabase-js": "^2.43.5",
     "next": "14.2.4",
     "react": "^18",
