--- a/package.json
+++ b/package.json
@@ -1,37 +1,42 @@
 {
-  "name": "nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.20",
-    "@mui/x-charts": "^7.7.1",
-    "@supabase/supabase-js": "^2.43.5",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/sortable": "^8.0.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "gsap": "^3.12.5",
-    "next": "14.2.3",
-    "postcss": "^8",
-    "recoil": "^0.7.7",
-    "sass": "^1.77.4",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "nextjs",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@mui/material": "^5.15.20",
+        "@mui/x-charts": "^7.7.1",
+        "@mui/x-data-grid": "^7.7.1",
+        "@supabase/supabase-js": "^2.43.5",
+        "next": "14.2.4",
+        "react": "^17.0.0 || ^18.0.0",
+        "react-dom": "^17.0.0 || ^18.0.0"
+    },
+    "peerDependencies": {
+        "react": "^17.0.0 || ^18.0.0",
+        "react-dom": "^17.0.0 || ^18.0.0"
+    },
+    "devDependencies": {
+        "@dnd-kit/core": "^6.1.0",
+        "@dnd-kit/sortable": "^8.0.0",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.4",
+        "gsap": "^3.12.5",
+        "next": "14.2.3",
+        "postcss": "^8",
+        "recoil": "^0.7.7",
+        "sass": "^1.77.4",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
