--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@mui/x-charts": "^7.7.1",
         "@mui/x-data-grid": "^7.7.1",
         "@supabase/supabase-js": "^2.43.5",
+        "@vercel/analytics": "^1.3.1",
         "next": "14.2.4",
         "react": "^17.0.0 || ^18.0.0",
         "react-dom": "^17.0.0 || ^18.0.0"
